<resources>
    <string name="app_name">FreeDating</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Registre -->
    <string name="noms">Nom amb cognoms</string>
    <string name="edat">Inserir edat</string>
    <string name="sexe1">Dona</string>
    <string name="sexe2">Home</string>
    <string name="ciutat">Inserir la vostra ciutat</string>
    <string name="emailRegister">Inserir un email…</string>
    <string name="passwordRegister">Password…</string>
    <string name="passwordRegister2">Torna a repetir el password!</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_search">Search</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_log">Profiles</string>
    <string name="menu_mailbox">Mailbox</string>
    <string name="menu_user">User</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_legal_warning">Legal warning</string>
    <string name="menu_terms_and_conditions">Terms and conditions</string>
    <string name="menu_data_privacy">Data privacy</string>
    <string name="menu_close_session">Close session</string>
    <!-- Preference Titles -->
    <string name="sync_title">Whatever</string>
    <string name="sync_preferences">Personal preferences</string>
    <string name="sync_account">Account</string>
    <string name="sync_system">System</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_notification">All notifications</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Sync contents -->
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="passwordLogin2">Repeat Password</string>
    <string name="clearRegister">Clear Text</string>
    <string name="register">Registra</string>
    <string name="loginButton">INICIAR  SESIÓN</string>
    <string name="registerText">¿TODAVÍA NO ERES USUARIO?</string>

    <!-- UserProfile -->
    <string name="subirImagen">Subir otra imagen</string>
    <string name="nomUser">Nom</string>
    <string name="edatUser">Edat</string>
    <string name="sexeUser">Sexe</string>
    <string name="ciutatUser">Ciutat</string>
    <string name="mailUser">Mail</string>
    <string name="btnCamera">Camara</string>
    <string name="btnGallery">Galeria</string>

</resources>